Agregado segunda fila para mostrar datos

--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -198,7 +198,7 @@ body {
 }
 
 .sideBar-name {
-  padding: 10px !important;
+  padding: 0 5px !important;
 }
 
 .name-meta {
@@ -211,7 +211,11 @@ body {
 }
 
 .sideBar-time {
-  padding: 10px !important;
+  padding: 0 10px !important;
+}
+
+.sideBar-time .btn-sm {
+  padding: 0 5px;
 }
 
 .time-meta {
@@ -512,7 +516,7 @@ body {
     margin: 0 !important;
   }
   .sideBar-name {
-    padding: 10px 5px !important;
+    padding: 0 5px !important;
   }
   .name-meta {
     font-size: 16px;
