--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -87,6 +87,19 @@ body {
   transition: left 1s ease;
 }
 
+.side-contact-profile{
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  position: absolute;
+  top: 0%;
+  right: -100%;
+  -webkit-transition: right 1s ease;
+  transition: right 1s ease;
+}
+
 .heading {
   padding: 10px 16px 10px 15px;
   margin: 0;
