--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -61,25 +61,12 @@ body {
   top: 0;
 }
 
-.side-profile {
+.side-profile, .side-contacts, .side-people {
   padding: 0;
   margin: 0;
   height: 100%;
   width: 100%;
   z-index: 3;
-  position: absolute;
-  top: 0%;
-  left: -100%;
-  -webkit-transition: left 1s ease;
-  transition: left 1s ease;
-}
-
-.side-people{
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 2;
   position: absolute;
   top: 0%;
   left: -100%;
