--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -181,13 +181,18 @@ body {
   box-shadow: none;
 }
 
-.sideBar {
+
+.sideBar, .sideBar-conversations {
   padding: 0 !important;
   margin: 0 !important;
   background-color: #fff;
   overflow-y: auto;
   border: 1px solid #f7f7f7;
   height: calc(100% - 120px);
+}
+
+.sideBar-conversations {
+  height: calc(100% - 60px);
 }
 
 .sideBar-profile {
