Mejoras en diseno responsive

--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -203,7 +203,8 @@ body {
   position: relative;
   padding: 10px !important;
   border-bottom: 1px solid #f7f7f7;
-  height: 72px;
+  /*height: 72px;*/
+  height: auto;
   margin: 0 !important;
   cursor: pointer;
 }
@@ -271,7 +272,7 @@ body {
   left: -100%;
 }
 .newMessage-heading {
-  padding: 10px 16px 10px 15px !important;
+  padding: 10px 0 !important;
   margin: 0 !important;
   height: 100px;
   width: 100%;
@@ -497,116 +498,31 @@ body {
   box-shadow: none;
 }
 
-@media screen and (max-width: 700px) {
-  
-  .heading {
-    height: 70px;
-    background-color: #009688;
-  }
-  .fa-2x {
-    font-size: 2.3em !important;
-  }
-  .heading-avatar {
-    padding: 0 !important;
-  }
-  .heading-avatar-icon img {
-    height: 50px;
-    width: 50px;
-  }
-  .heading-compose {
-    padding: 5px !important;
-  }
-  .heading-compose i {
-    color: #fff;
-    cursor: pointer;
-  }
-  .heading-dot {
-    padding: 5px !important;
-    /*margin-left: 10px !important;*/
-  }
-  .heading-dot i {
-    color: #fff;
-    cursor: pointer;
-  }
-  .sideBar {
-    height: calc(100% - 130px);
-  }
-  .sideBar-body {
-    height: 80px;
-  }
-  .sideBar-avatar {
-    text-align: left;
-    padding: 0 8px !important;
-  }
-  .avatar-icon img {
-    height: 55px;
-    width: 55px;
-  }
-  .sideBar-main {
-    padding: 0 !important;
-  }
-  .sideBar-main .row {
-    padding: 0 !important;
-    margin: 0 !important;
-  }
-  .sideBar-name {
-    padding: 0 5px !important;
-  }
-  .name-meta {
-    font-size: 16px;
-    padding: 5% !important;
-  }
-  .sideBar-time {
-    padding: 10px !important;
-  }
-  .time-meta {
-    text-align: right;
-    font-size: 14px;
-    padding: 4% !important;
-    color: rgba(0, 0, 0, 0.4);
-    vertical-align: baseline;
-  }
-  /*Conversation*/
-  .conversation {
-    padding: 0 !important;
-    margin: 0 !important;
+@media screen and (max-width: 500px) {
+  html,
+  body {
     height: 100%;
-    /*width: 100%;*/
-    border-left: 1px solid rgba(0, 0, 0, 0.08);
-    /*overflow-y: auto;*/
+    overflow: auto;
   }
-  .message {
+  .conversation {
+    height: auto;
+  }
+  .sideBar-conversations .sideBar-body {
+    height: auto;
+  }
+  .heading {
+    height: 82px;
+  }
+    
+  .app {
+    height: calc(100% - 60px);
+  }
+
+  .sideBar, .sideBar-conversations {
+    height: calc(100% - 80px);
+  }
+
+  .message {    
     height: calc(100% - 140px);
-  }
-  .reply {
-    height: 70px;
-  }
-  .reply-emojis {
-    padding: 5px 0 !important;
-  }
-  .reply-emojis i {
-    padding: 5px 2px !important;
-    font-size: 1.8em !important;
-  }
-  .reply-main {
-    padding: 2px 8px !important;
-  }
-  .reply-main textarea {
-    padding: 8px !important;
-    font-size: 18px;
-  }
-  .reply-recording {
-    padding: 5px 0 !important;
-  }
-  .reply-recording i {
-    padding: 5px 0 !important;
-    font-size: 1.8em !important;
-  }
-  .reply-send {
-    padding: 5px 0 !important;
-  }
-  .reply-send i {
-    padding: 5px 2px 5px 0 !important;
-    font-size: 1.8em !important;
   }
 }
