--- a/public/css/messenger.css
+++ b/public/css/messenger.css
@@ -284,7 +284,7 @@ body {
   padding: 10px 16px 0 15px !important;
   margin: 0 !important;
   height: 60px;
-  margin-top: 30px !important;
+  /*margin-top: 30px !important;*/
   width: 100%;
   z-index: 1001;
   color: #fff;
